src/css/index.css
/* GLOBAL SETTINGS */

:root {
  --bg-color: #0c0a16;
  --bg-dk-color: #020405;
  --txt-color: #e2ead8;
  --txt-dk-color: #74e5ef;
}

* {
  font-family: 'Inter', sans-serif;
  margin: 0;
  line-height: 1.5;
}

body { 
  background-color: var(--bg-dk-color);
  font-size: 1.1rem;
}

.italic {
  font-style: italic;
}

.color-2 {
  color: var(--txt-dk-color);
}

a {
  text-decoration: none;
  color: var(--txt-color);
  margin: 3px 0;
}

a:hover {
  color: var(--txt-dk-color);
  text-shadow: 0 1px 1px black;
}

a:visited {
  color: var(--txt-color);
}

li {
  margin-bottom: 5px;
}

/* App.js and Main */
.App {
  color: var(--txt-color);
}

main {
  padding: 10vh 0;
  background-color: var(--bg-dk-color);
}

/* Header Component */
header {
  position: fixed;
  top: 0;
  width: 100%;
  height: 80px;
  background-color: var(--bg-color);
  box-shadow: 0 -1px 4px var(--txt-color);
  padding-bottom: 3px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

header h1 {
  text-align: center;
  margin: 0;
  padding: 0;
}

header h1 a {
  text-shadow: 1px 1px 2px black;
}

header h1 a:hover {
  color: var(--txt-dk-color);
  text-shadow: none;
}

nav {
  margin-bottom: 0;
  padding: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: flex-end;
}

.nav-link {
  font-size: 1.1rem;
}

.nav-link:hover {
  color: var(--txt-dk-color);
  text-shadow: 0 1px 1px black;
}

.nav-link.active {
  text-decoration: underline;
  color: var(--txt-dk-color);
  text-shadow: 0 1px 2px black;
  font-size: 1.2rem;
}

/* Form Components */
.About, .Contact {
  padding: 0 3vw;
  margin-top: 40px;
}

form {
  width: 94vw;
  margin: 0 10px;
}

fieldset {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
  background-color: var(--bg-color);
}

legend {
  font-size: 1.5rem;
  margin-left: 20px;
}

/* About Form */
.bio-form {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
}

.bio-form-top {
  width: 100%;
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
}

.grow {
  position: absolute;
  width: 85vw;
}

.bio-form-bottom {
  margin-top: 75px;
  width: 100%;
}

.bio-img {
padding: 0 4px;
}

.bio-img img {
  height: 175x;
  width: 175px;
}

.bio-text {
  padding: 0 0 0 5px;
}

.bio-sig {
  text-align: center;
}

label {
  font-size: 1.2rem;
}

.form-input {
  width: 95%;
  height: 1.6rem;
  border-radius: 5px;
}

.form-text {
  width: 95%;
  height: 22vh;
  border-radius: 5px;
}

.form-btn {
  margin-top: 8px;
  width: 120px;
  font-size: 1.2rem;
  border-radius: 5px;
}

.form-btn:hover {
  cursor: pointer;
}

/* Portfolio Component */
.Portfolio {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-top: 40px;
}

/* Project Component */
.Project {
  width: 300px;
  box-shadow: 0 0 2px var(--txt-color);
  margin: 30px;
  padding-bottom: 4px;
  text-align: center;
  background-color: var(--bg-color);
}

.Project img {
  height: 270px;
  width: 300px;
}

.Project h3 {
  margin: 5px 0;
}

.link:hover {
  text-decoration: underline;
  color: var(--txt-dk-color);
}

/* Resume Component */

.Resume {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  margin-top: 15px;
}

.resume-btn-container {
  width: 100%;
  text-align: center;
  margin-bottom: 12px;
}

.resume-btn a {
  background-color: var(--txt-dk-color);
  color: black;
  padding: 5px 14px;
  border: 1px solid var(--txt-dk-color);
  border-radius: 6px;
}

.resume-btn a:hover {
  text-shadow: none;
  color: var(--txt-dk-color);
  background-color: black;
}

.resume-dl-link {
  width: 100%;
  text-align: center;
  margin-bottom: 5px;
}

.resume-dl-link a {
  color: var(--txt-dk-color);
}

.resume-dl-link a:hover {
  text-shadow: 0 0 3px var(--txt-dk-color);
}

.resume-fields {
  margin-top: 10px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

/* Footer Component */
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 35px;
  padding-top: 1vh;
  text-align: center;
  background-color: var(--bg-color);
  box-shadow: 0 1px 4px var(--txt-color);
}

.footer-link {
  margin: 0 22px;
}

.footer-link:hover {
  color: var(--txt-dk-color);
}

.footer-link svg {
  height: 33px;
}

/* NoMatch Component */
.nomatch {
  text-align: center;
  padding-top: 20vh;
}

@media screen and (min-width: 418px) {
  .bio-form-bottom {
    margin-top: 50px;
  }
}

@media screen and (min-width: 444px) {
  .grow {
    position: static;
    width: 100%;
  }

  .bio-form-bottom {
    margin-top: 0;
  }
}

@media screen and (min-width: 720px) {

  /* Header */
  header {
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-end;
    height: 70px;
  }
  
  header h1 {
    width: 33vw;
  }

  nav {
    width: 67%;
  }

  .nav-link {
    font-size: 1.2rem;
  }
  
  .nav-link.active {
    font-size: 1.3rem;
  }

  .footer-link {
    margin: 35px;
  }

  /* Forms */
  .Contact, .About, .Resume {
    padding: 0;
    display: flex;
    justify-content: center;
  }
  
  form {
    width: 680px;
  }
}

@media screen and (min-width: 1080px) {
  header {
    height: 60px;
  }

  h1 {
    font-size: 2.1rem;
  }

  .nav-link {
    font-size: 1.3rem;
  }
  
  .nav-link.active {
    font-size: 1.4rem;
  }
}

